<resources>
    <string name="text_submit">Submit</string>
    <string name="tag">Tag</string>
    <string name="trainer_ssc_certificate_document">SSC Certified Document</string>
    <string name="trainer_min_qualification">Minimum Qualification</string>
    <string-array name="upload_image_actions">
        <item>Take Photo</item>
        
        <item>Cancel</item>
    </string-array>
    <string name="alert">Alert</string>
    <string name="messageNetwork">Network not available</string>
    <string name="no_image_upload">There are no new updations in this section for submission.</string>
    <string name="ok">ok</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="alert_network_error">Network error. Please try again</string>
    <string name="complete">You have successfully completed inspection of allocated institute. please click on given link to capture your feedback on inspection experience. </string>
    <string name="alert_center_details_saved_successfully">General details saved successfully</string>
    <string name="alert_trainer_details_saved_successfully">Trainer details saved successfully</string>
    <string name="alert_equip_details_saved_successfully">Equipment details saved successfully</string>
    <string name="alert_classroom_details_saved_successfully">Classroom details saved successfully</string>
    <string name="alert_office_area_details_saved_successfully">Centre Area details saved successfully</string>
    <string name="alert_lab_details_saved_successfully">Lab details saved successfully</string>
    <string name="title_activity_full_screen_image_view">FullScreenImageViewActivity</string>
    <string name="title_activity_center_details">General Details</string>
    <string name="title_activity_trainers_curriculum">Trainer Details</string>
    <string name="title_activity_classrooms">Classrooms</string>
    <string name="title_activity_labs">Labs</string>
    <string name="title_activity_office_areas">Centre Areas</string>
    <string name="title_activity_equipments">Equipments</string>
    <string name="title_activity_photo_categories">Photograph Upload</string>
    <string name="text_classroom_help_text">Please upload pictures of each classroom as per defined sections. In Classroom view, take 2 pictures of each classroom. Picture should depict entire area.</string>
    <string name="text_centre_details_help_text">Please upload pictures of following Sections</string>
    <string name="text_labs_help_text">Please upload pictures of each lab as per defined sections. In Lab view, take 2 pictures of each lab. Picture should depict entire area.</string>
    <string name="text_office_areas_help_text">Please click pictures of different office areas from the diagonal corner of the room.</string>
    <string name="text_equipments_help_text">Please click the pictures of all the Tools Above 10000 </string>
    <string name="text_trainers_help_text">Please upload the pictures of the following sections</string>
    <string name="text_facilities_help_text">Please click pictures of different facilities of Institute as per defined sections. In Safe drinking water, click picture of Water Vending Unit (RO, Water Purifier, Water dispenser etc.)</string>
    <string name="text_res_facility_help_text">Please click pictures of residential facility as per defined sections. Please click pictures of any two rooms of hostel facility.</string>
    <string name="alert_unable_to_get_location">App is unable to get accurate location. Please enable your GPS setting and restart the application</string>
    <string name="alert_facilities_saved_successfully">General Details saved successfully</string>
    <string name="alert_res_facility_details_saved_successfully">Residential Facility details saved successfully</string>
    <string name="alert_data_not_submitted">Data could not be submitted. Please try again</string>
    <string name="title_activity_residential_facility">Residential Facility</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="alert_pending_changes">Are you sure  you want to return to main menu?</string>
    <string name="alert_submit_data">Are you sure want to submit this section?</string>
    <string name="app_name">ITI Inspector app</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="logoutmenu">Logout</string>
    <string name="refreshmenu">Refresh</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="btn_sign_up">Login</string>
    <string name="btnStartInspection">Start</string>
    <string name="btnCompleteInspection">Complete</string>
    <string name="title_activity_institute">InstituteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_sub_category">SubCategoryActivity</string>
    <string name="title_activity_sub_category_equipment">SubCategoryEquipmentActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="draw_home">Home</string>
    <string name="draw_logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="label_enter_remarks">Enter Remark</string>
    <string name="label_enter_NC">Enter NC</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_nc">Reason for NC</string>
    <string name="label_done">Done</string>
    <string name="label_cancel">Cancel</string>
    <string name="genInfo_ques1">Type of the Collection Centre / source of sample</string>
    <string name="genInfo_ques2">Size of premises</string>
    <string name="genInfo_ques3">Average Number of patients per day</string>
    <string name="genInfo_ques4">Does it meet the requirement of the workload </string>
    <string name="genInfo_ques5">Reception and waiting area separate from collection area</string>
    <string name="genInfo_ques6">Hand washing facility </string>
    <string name="genInfo_ques7">Clean toilet facility on site</string>
    <string name="genInfo_ques8">Provision of privacy during collections</string>
    <string name="genInfo_ques9">Hours of operation have been displayed</string>
    <string name="trust_ques1">Institute Owned By</string>
    <string name="trust_ques2">Is Trust/Society/Company Registered</string>
    <string name="trust_ques3">Registration No</string>
    <string name="trust_ques4">Enter Name of Trust/Society/Company</string>
    <string name="trust_ques5">Date Up To Which Registration\n of Trust/Society/Company Is Valid(DD/MM/YYYY) </string>
    <string name="trust_ques6">PAN Number (If Individual)*</string>
    <string name="Training_Reason">Reason for Discontinuing Inspection Work</string>
    <string name="ques1">Select Training Centre</string>
    <string name="ques2">Reason:</string>
    <string name="categorymenu">Categories</string>
    <string name="institutesmenu">Training Centre Dashboard</string>
    <string name="exitmenu">Exit</string>
    <string name="org_ques1">Name of Organization *</string>
    <string name="org_ques2">Authorized Person *</string>
    <string name="org_ques3">Authorized Person\'s UID</string>
    <string name="org_ques4">Authorized Person\'s Role</string>
    <string name="org_ques5">Mobile No *</string>
    <string name="org_ques6">Email Address *</string>
    <string name="org_ques7">Tel. No.(with STD)</string>
    <string name="org_ques8">Fax No.(with STD)</string>
    <string name="org_ques9">Postal Address *</string>
    <string name="org_ques10">Landmark *</string>
    <string name="org_ques11">State *</string>
    <string name="org_ques12">District *</string>
    <string name="org_ques13">Tehsil/Mandal</string>
    <string name="org_ques14">Pincode *</string>
    <string name="org_ques15">Website</string>
    <string name="labelEmptyRemark">Please enter remark</string>
    <string name="labelEmptyNC">Please enter reason for NC</string>
    <string name="formHelpTxt">Click on check icon if a record is compliant or else click on Edit icon to update the correct value</string>
<string name="help_text_institute"> Select the Institute allocated for Inspection today.
Note : GPS and Internet on your smart phone should be turned on before using this app.</string>
    <string name="help_text_category">Select relevant category for Inspection. Data filled by Institute will be downloaded from server on click of download icon. Once Inspection of a section is completed and submitted, it will not be editable.</string>
    <string name="welcomeMsg1">Welcome to ITI Inspector App.</string>
    <string name="welcomeMsg2">Please click on Continue to proceed for the Inspection</string>
    <string name="welcomeMsg4"> Please click NEXT to proceed for Inspection of Allocated Training Centres.</string>
    <string name="welcomeMsg3">Do you want to conduct inspection?</string>
    <string name="labelStartInspection">Are you sure you want to start Inspection of selected ITI ?</string>
    <string name="labelCompleteInspection">Are you sure you want to mark completion of Inspection of selected ITI ?</string>
    <string-array name="qualification">
        <item>ITI</item>
        <item>Diploma</item>
        <item>NAC(National Apprenticeship Certificate)</item>
        <item>NIC(National Trade Certificate)</item>
        <item>Degree</item>
        <item>PG Degree</item>
    </string-array>
    <string name="techQues1">Designation*</string>
    <string name="techQues2">Name*</string>
    <string name="techQues3">Father Name*</string>
    <string name="techQues4">Date of Birth*(DD/MM/YYYY)</string>
    <string name="techQues5">Joining Date*(DD/MM/YYYY)</string>
    <string name="techQues6">Qualification*</string>
    <string name="techQues7">Stream*</string>
    <string name="techQues8">Graduating Year*</string>
    <string name="techQues9">Total Year of Exp.*</string>
    <string name="techQues10">Bank Account No.</string>
    <string name="techQues11">Bank Name</string>
    <string name="techQues12">Branch Name</string>
    <string name="techQues13">Aadhar No.*</string>
    <string name="insQues1">Trade Name*</string>
    <string name="insQues2">Instructor *</string>
    <string name="insQues3">Name*</string>
    <string name="insQues4">Father Name*</string>
    <string name="insQues5">Date of Birth*(DD/MM/YYYY) </string>
    <string name="insQues6">Joining Date*(DD/MM/YYYY) </string>
    <string name="insQues7">Qualification*</string>
    <string name="insQues8">Graduating Year*</string>
    <string name="insQues9">Stream*</string>
    <string name="insQues10">Total Year of Exp.*</string>
    <string name="insQues11">Bank Name</string>
    <string name="insQues12">Branch Name</string>
    <string name="insQues13">Account No.</string>
    <string name="insQues14">Aadhar No.*</string>
    <string name="insQues15">Salary (P.A.)</string>
    <string name="tradeQues1">Name of the Trade*</string>
    <string name="tradeQues2">Shift1*</string>
    <string name="tradeQues3">Shift2*</string>
    <string name="tradeQues4">Shift3*</string>
    <string name="tradeQues5">Total*</string>
    <string name="landsection1">Area Details</string>
    <string name="landsection2">Building Details</string>
    <string name="landsection3">Site Plan Details</string>
    <string name="landsection4">Other Details</string>
    <string name="landsection5">Washroom Details</string>
    <string name="landques1">Total Open Area(Sq. Mtr.) </string>
    <string name="landques2">Total Build Up Area(Sq. Mtr.)</string>
    <string name="landques3">Total Land(Sq. Mtr.) </string>
    <string name="landques4">Building Type </string>
    <string name="landques5">Date Of Occupancy (DD/MM/YYYY) </string>
</resources>