<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="10dp"
              android:background="@drawable/btn_background"
              android:orientation="vertical">


    <TextView
        android:id="@+id/remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/label_remarks"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/label_enter_remarks"/>


    <TextView
        android:id="@+id/textRemarkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/label_enter_remarks"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editRemark"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/bg_edit_text"
        android:gravity="top"
        android:padding="@dimen/margin_medium"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonRemark"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:text="@string/label_done"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_large"
            android:background="@drawable/bg_button"
            android:text="@string/label_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
