<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/windowBackground">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_login_padding_top_bottom_medium">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" 
        android:gravity="bottom">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_login_padding_left_right"
            android:paddingRight="@dimen/activity_login_padding_left_right" >

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_username"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_login_padding_left_right"
            android:paddingRight="@dimen/activity_login_padding_left_right" >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/white"
            style="@style/HeadingFontStyle" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0001" 
        android:background="@drawable/login"        
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>